adding zip source of synbucket

--- a/site_contents/03_01/synbucket.html
+++ b/site_contents/03_01/synbucket.html
@@ -8,13 +8,29 @@ Synbucket for learning vocabularies
 </p>
 </div>
 
+<div class="w3-left" style="text-align: left; margin-left: 5%">
+You can 
+<a href="LEVEL/site_contents/03_01/Synbucket.zip" download>
+<button class="btn"><i class="fa fa-download"></i> download here</button>
+</a>
+  Synbucket as compressed ZIP file. Or if you are familiar with GIT, clone the repository
 <br>
+<p class="w3-center" style="margin-left: 25%">
+<code  style="background-color: coral"> git clone <a href="https://github.com/arabiclegacy/Synbucket"> https://github.com/arabiclegacy/Synbucket</a> </code>
+</p>
+<br>
+</div>
+
+<br>
+<div class="w3-center" style="margin-left: 5%">
+<div id="demo5" class="w3-center" style="text-align: left; margin-left: 5%" ></div>
+</div>
 <div id="demo2" class="w3-left" style="text-align: left; margin-left: 5%" ></div>
-<br>
-<div id="demo5" class="w3-left" style="text-align: left; margin-left: 5%" ></div>
 <br>
 
 <div class="w3-left" style="text-align: left; margin-left: 5%">
+<br>
+<br>
 Synbucket is a tool to add and rehearse synonyms. It can be used effectively for learning languages vocabularies. Its idea is to provide a way for quickly revising some synonyms that user adds himself to his words database.
 Therefore, it has basically two main functionalities: Adding Synonyms or Revising Synonyms.
 <br>
@@ -81,9 +97,9 @@ For running in CLI
 var txt2 = "";
 var txt5 = "";
 
-txt2 += 'في حالة عدم توافر متصفح لملفات  MP4 يمكنك تحميل الملف من هذا الرابط: <a href="LEVEL/site_contents/03_01/SynbucketVid.mp4" class="w3-text-blue">هنا</a>';
+txt2 += 'If your browser does not support playing MP4 files, you can download the video: <a href="LEVEL/site_contents/03_01/SynbucketVid.mp4" class="w3-text-blue">here</a>';
 
-txt5 += '<video controls> <source src="LEVEL/site_contents/03_01/SynbucketVid.mp4" type="video/mp4" style="width:100%"> </video>';
+txt5 += '<video width="320" controls> <source src="LEVEL/site_contents/03_01/SynbucketVid.mp4" type="video/mp4"> </video>';
 
 
 document.getElementById("demo2").innerHTML += txt2;
