fix in code text

--- a/site_contents/03_01/synbucket.html
+++ b/site_contents/03_01/synbucket.html
@@ -65,11 +65,11 @@ Running in Windows
 <br> 
 Synbucket can be invoked by running the executable file Synbucket.exe or from command terminal by simply typing
 <br>
-<code style="background-color: coral"> > Synbucket.exe</code>
+<code style="background-color: coral"> Synbucket.exe</code>
 <br>
 If you need to rehearse or add words using CLI mode simply in a command terminal type
 <br>
-<code style="background-color: coral"> > Synbucket.exe CLI</code>
+<code style="background-color: coral"> Synbucket.exe CLI</code>
 <br>
 
 <h3>
@@ -79,11 +79,11 @@ Running in Linux
 <br>
 Same as before, for running in GUI
 <br>
-<code style="background-color: coral"> > Synbucket</code>
+<code style="background-color: coral"> Synbucket</code>
 <br>
 For running in CLI
 <br>
-<code style="background-color: coral"> > Synbucket CLI</code>
+<code style="background-color: coral"> Synbucket CLI</code>
 <br>
 <br>
 
