enhancements and adding integration page

--- a/03_01/synbucket.html
+++ b/03_01/synbucket.html
@@ -2,7 +2,7 @@
 <html dir="rtl" lang="ar">
 <head>
 <title>Arabic Legacy</title>
-<link rel="icon" href="../000/shots/arabiclegacy_logo.png">
+<link rel="icon" href="../site_contents/shots/arabiclegacy_logo.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../interface_css/w3.css">
@@ -32,7 +32,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
     <i class="fa fa-remove"></i>
     </a>
-    <img src="../000/shots/arabiclegacy_logo.png" style="width:45%;" class="w3-round"><br>
+    <img src="../site_contents/shots/arabiclegacy_logo.png" style="width:45%;" class="w3-round"><br>
     <h3><b>إرث عربي</b></h3>
     <p class="w3-text-grey">ملفات شخصية</p>
   </div>
@@ -69,12 +69,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Synbucket</div></a>  
 </div> 
+ 
+<button  onclick="myAccFunc('engineeringAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
+  <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
+  <a href="../engineering/eng_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات هندسية</div></a>
+  <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
+</button>
+<div id="engineeringAcc" class="w3-hide w3-container">
+   <a href="../engineering/importantintegrations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_integration_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">32 تكاملات مهمة</div></a>  
+</div> 
 
     </div>
   </div>
   <div class="w3-panel w3-large">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <a href= "https://www.facebook.com/erth.arabi"> <i class="fa fa-facebook-official w3-hover-opacity"></i> </a>
+    <a href= "https://www.github.com/arabiclegacy"> <i class="fa fa-github w3-hover-opacity"></i> </a>
   </div>
 </nav>
 
@@ -85,10 +96,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-right:20%">
-<img src="../000/shots/self_arab_cover_lower.png" style="width:100%;" class="w3-round">
+<img src="../site_contents/shots/self_arab_cover_lower.png" style="width:100%;" class="w3-round">
 
 <nav class="w3-bar w3-sand w3-border w3-padding-small" id="myHorzBar">
-    <img src="../000/shots/arabiclegacy_logo.png" style="width:5%;" class="w3-round w3-right w3-padding-small">
+    <img src="../site_contents/shots/arabiclegacy_logo.png" style="width:5%;" class="w3-round w3-right w3-padding-small">
     
     <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_home_list_LIST_COLOR"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">الرئيسية</div> </a> 
     <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-user     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">مقدم المحتوى</div></a> 
@@ -120,6 +131,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Synbucket</div></a>  
 </div> 
+ 
+<button  onclick="myAccFunc('engineeringAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
+  <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
+  <a href="../engineering/eng_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات هندسية</div></a>
+  <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
+</button>
+<div id="engineeringAcc2" class="w3-hide w3-container">
+   <a href="../engineering/importantintegrations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_integration_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">32 تكاملات مهمة</div></a>  
+</div> 
 
 </nav>
 
@@ -135,7 +157,7 @@ Synbucket for learning vocabularies
 
 <div class="w3-left" style="text-align: left; margin-left: 5%">
 You can 
-<a href="../site_contents/03_01/Synbucket.zip" download>
+<a href="../site_contents/pub_doc/Synbucket.zip" download>
 <button class="btn"><i class="fa fa-download"></i> download here</button>
 </a>
   Synbucket as compressed ZIP file. Or if you are familiar with GIT, clone the repository
@@ -222,9 +244,9 @@ For running in CLI
 var txt2 = "";
 var txt5 = "";
 
-txt2 += 'If your browser does not support playing MP4 files, you can download the video: <a href="../site_contents/03_01/SynbucketVid.mp4" class="w3-text-blue">here</a>';
+txt2 += 'If your browser does not support playing MP4 files, you can download the video: <a href="../site_contents/pub_doc/SynbucketVid.mp4" class="w3-text-blue">here</a>';
 
-txt5 += '<video width="320" controls> <source src="../site_contents/03_01/SynbucketVid.mp4" type="video/mp4"> </video>';
+txt5 += '<video width="320" controls> <source src="../site_contents/pub_doc/SynbucketVid.mp4" type="video/mp4"> </video>';
 
 
 document.getElementById("demo2").innerHTML += txt2;
