--- a/engineering/eng_home.html
+++ b/engineering/eng_home.html
@@ -13,6 +13,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 </style>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
+<!--
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174131781-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -21,6 +22,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 
   gtag('config', 'UA-174131781-1');
 </script>
+-->
+
+<!-- Matomo -->
+<script type="text/javascript">
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://arabiclegacy.matomo.cloud/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.src='//cdn.matomo.cloud/arabiclegacy.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
 
 
 </head>
