--- a/003/paradigm.html
+++ b/003/paradigm.html
@@ -25,6 +25,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 -->
 
 <!-- Matomo -->
+<!--
 <script type="text/javascript">
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
@@ -39,6 +40,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
   })();
 </script>
 <!-- End Matomo Code -->
+-->
+
+
+<!-- Clicky -->
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101301402);</script>
+<script async src="//static.getclicky.com/js"></script>
+<!-- End Clicky Code -->
 
 
 </head>
