--- a/site_contents/03_00_language_home.html
+++ b/site_contents/03_00_language_home.html
@@ -6,8 +6,11 @@
 <br>
 <div class="w3-container w3-margin-bottom"> 
 <ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="LEVEL/03_01/synbucket.html">
+  <a href="LEVEL/language/synbucket.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>برنامج لحفظ ومراجعة مفردات لغوية</li>
+  </a>
+  <a href="LEVEL/language/GrammatikOverview.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Overview about German Grammar</li>
   </a>
 </ul>
 </div>
