--- a/engineering/eng_home.html
+++ b/engineering/eng_home.html
@@ -96,7 +96,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Synbucket</div></a>   <a href="../language/GrammatikOverview.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Overview_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Übersicht</div></a>  
+     <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Verben</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
@@ -160,7 +162,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Synbucket</div></a>   <a href="../language/GrammatikOverview.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Overview_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Übersicht</div></a>  
+     <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Verben</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
