--- a/site_contents/03_00_language_home.html
+++ b/site_contents/03_00_language_home.html
@@ -12,6 +12,9 @@
   <a href="LEVEL/language/GrammatikOverview.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Overview about German Grammar</li>
   </a>
+  <a href="LEVEL/language/GrammatikVerben.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Verben in German Grammar</li>
+  </a>
 </ul>
 </div>
 <br>
