--- a/language/GrammatikNomen.html
+++ b/language/GrammatikNomen.html
@@ -98,12 +98,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Nomen_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Nomen</div></a>  
 </div> 
  
-<button  onclick="myAccFunc('engineeringAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('engineeringAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../engineering/eng_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات هندسية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -166,12 +166,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Nomen_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Nomen</div></a>  
 </div> 
  
-<button  onclick="myAccFunc('engineeringAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('engineeringAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../engineering/eng_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات هندسية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -184,19 +184,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 
 </nav>
 
-<p id="islamic_home">
-<h5>
-هذا الجزء يحتوي على الملفات التالية
-</h5>
+<p id="D_Nomen_id">
+<header>
+<h2>
+Deutsche Grammatik - Nomen
+</h2>
+</header>
 </p>
 <br>
-<div class="w3-container w3-margin-bottom"> 
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../engineering/importantintegrations.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>32 تكاملات مهمة</li>
-  </a>
-</ul>
-</div>
+<img src="../site_contents/pub_doc/08_Nomen.png" style="width:100%;" class="w3-round">
 <br>
 
 
