--- a/language/synbucket.html
+++ b/language/synbucket.html
@@ -98,7 +98,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Verben</div></a>  
+     <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Nomen_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Nomen</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
@@ -164,7 +166,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Verben</div></a>  
+     <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Nomen_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Nomen</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
