--- a/site_contents/00_home/content_home.html
+++ b/site_contents/00_home/content_home.html
@@ -20,7 +20,7 @@
 <div class="w3-third w3-right w3-margin">
 <div class="w3-card" >
   <h4 class="w3-center">إسلامية</h4>
-    <a href="LEVEL/001/islamic_home.html">
+    <a href="LEVEL/islamic/islamic_home.html">
       <img src="LEVEL/site_contents/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
     </a>
 </div>
