--- a/site_contents/03_00_language_home.html
+++ b/site_contents/03_00_language_home.html
@@ -18,6 +18,9 @@
   <a href="LEVEL/language/GrammatikNomen.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Nomen in German Grammar</li>
   </a>
+  <a href="LEVEL/language/GrammatikArtikel.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Artikel in German Grammar</li>
+  </a>
 </ul>
 </div>
 <br>
