--- a/islamic/islamic_home.html
+++ b/islamic/islamic_home.html
@@ -71,7 +71,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
+<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../islamic/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -94,7 +94,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="languageAcc" class="w3-hide w3-container">
    <a href="../language/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_synbucket_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Synbucket</div></a>   <a href="../language/GrammatikOverview.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <div class="w3-right">Synbucket</div></a>   <a href="../language/GrammatikOverview.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Overview_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
@@ -141,7 +141,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
+<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../islamic/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -164,7 +164,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="languageAcc2" class="w3-hide w3-container">
    <a href="../language/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_synbucket_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Synbucket</div></a>   <a href="../language/GrammatikOverview.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <div class="w3-right">Synbucket</div></a>   <a href="../language/GrammatikOverview.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Overview_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Übersicht</div></a>   <a href="../language/GrammatikVerben.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Verben_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
@@ -188,35 +188,30 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 
 </nav>
 
-<p id="D_Overview_id">
-<header>
-<h2>
-Deutsche Grammatik Übersicht
-</h2>
-</header>
+<p id="islamic_home">
+<h5>
+هذا الجزء يحتوي على الملفات التالية
+</h5>
 </p>
 <br>
-<img src="../site_contents/pub_doc/06_G_Overview.png" style="width:100%;" class="w3-round">
+<div class="w3-container w3-margin-bottom"> 
+<ul class="w3-ul w3-right w3-sand" style="width:100%;">
+  <a href="../islamic/tajweed.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>تلخيص لأحكام تجويد القرآن الكريم</li>
+  </a>
+</ul>
+<ul class="w3-ul w3-right w3-sand" style="width:100%;">
+  <a href="../islamic/paradigm.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
+  </a>
+</ul>
+<ul class="w3-ul w3-right w3-sand" style="width:100%;">
+  <a href="../islamic/qinfo.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Quran Infographic</li>
+  </a>
+</ul>
+</div>
 <br>
-
-
-
-<script>
-var txt2 = "";
-var txt5 = "";
-
-txt2 += 'في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: <a href="../site_contents/pub_doc/cognitive_model.pdf" class="w3-text-blue">هنا</a>';
-
-if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
-    txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/pub_doc/cognitive_model.pdf&embedded=true" />';
-} else {
-    txt5 += '<embed src="../site_contents/pub_doc/cognitive_model.pdf" width="800px" height="2100px" />';
-}
-
-document.getElementById("demo2").innerHTML += txt2;
-document.getElementById("demo5").innerHTML += txt5;
-</script>
-
 
 
 
