--- a/language/GrammatikArtikel.html
+++ b/language/GrammatikArtikel.html
@@ -71,17 +71,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
-  <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
+  <a href="../islamic/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
 </button>
 <div id="demoAcc" class="w3-hide w3-container">
-   <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
+   <a href="../islamic/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../islamic/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
+     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../islamic/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Quran Infographic</div></a>  
 </div> 
@@ -100,7 +100,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Nomen_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Nomen</div></a>  
+     <div class="w3-right">Grammatik Nomen</div></a>   <a href="../language/GrammatikArtikel.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Artikel</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
@@ -139,17 +141,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
-  <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
+  <a href="../islamic/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
 </button>
 <div id="demoAcc2" class="w3-hide w3-container">
-   <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
+   <a href="../islamic/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../islamic/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
+     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../islamic/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Quran Infographic</div></a>  
 </div> 
@@ -168,7 +170,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Verben</div></a>   <a href="../language/GrammatikNomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Nomen_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Nomen</div></a>  
+     <div class="w3-right">Grammatik Nomen</div></a>   <a href="../language/GrammatikArtikel.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Artikel</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
@@ -184,29 +188,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 
 </nav>
 
-<p id="islamic_home">
-<h5>
-هذا الجزء يحتوي على الملفات التالية
-</h5>
+<p id="D_Artikel_id">
+<header>
+<h2>
+Deutsche Grammatik - Artikel
+</h2>
+</header>
 </p>
 <br>
-<div class="w3-container w3-margin-bottom"> 
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../002/tajweed.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>تلخيص لأحكام تجويد القرآن الكريم</li>
-  </a>
-</ul>
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../003/paradigm.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
-  </a>
-</ul>
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../004/qinfo.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Quran Infographic</li>
-  </a>
-</ul>
-</div>
+<img src="../site_contents/pub_doc/09_Artikel.png" style="width:100%;" class="w3-round">
 <br>
 
 
