--- a/site_contents/01_00_islamic_home.html
+++ b/site_contents/01_00_islamic_home.html
@@ -6,17 +6,17 @@
 <br>
 <div class="w3-container w3-margin-bottom"> 
 <ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="LEVEL/002/tajweed.html">
+  <a href="LEVEL/islamic/tajweed.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>تلخيص لأحكام تجويد القرآن الكريم</li>
   </a>
 </ul>
 <ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="LEVEL/003/paradigm.html">
+  <a href="LEVEL/islamic/paradigm.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
   </a>
 </ul>
 <ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="LEVEL/004/qinfo.html">
+  <a href="LEVEL/islamic/qinfo.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Quran Infographic</li>
   </a>
 </ul>
