--- a/language/GrammatikAdjektiv.html
+++ b/language/GrammatikAdjektiv.html
@@ -86,7 +86,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <div class="w3-right">Quran Infographic</div></a>  
 </div> 
  
-<button  onclick="myAccFunc('languageAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('languageAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_language_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../language/language_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات لغوية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -104,7 +104,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Artikel</div></a>   <a href="../language/GrammatikPronomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Pronomen_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Adjektiv</div></a>  
 </div> 
@@ -160,7 +160,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <div class="w3-right">Quran Infographic</div></a>  
 </div> 
  
-<button  onclick="myAccFunc('languageAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('languageAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_language_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../language/language_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات لغوية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -178,7 +178,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Artikel</div></a>   <a href="../language/GrammatikPronomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Pronomen_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Adjektiv</div></a>  
 </div> 
@@ -196,37 +196,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 
 </nav>
 
-<p id="language_home">
-<h5>
-هذا الجزء يحتوي على الملفات التالية
-</h5>
+<p id="D_Adjektiv_id">
+<header>
+<h2>
+Deutsche Grammatik - Adjektiv
+</h2>
+</header>
 </p>
 <br>
-<div class="w3-container w3-margin-bottom"> 
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../language/synbucket.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>برنامج لحفظ ومراجعة مفردات لغوية</li>
-  </a>
-  <a href="../language/GrammatikOverview.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Overview about German Grammar</li>
-  </a>
-  <a href="../language/GrammatikVerben.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Verben in German Grammar</li>
-  </a>
-  <a href="../language/GrammatikNomen.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Nomen in German Grammar</li>
-  </a>
-  <a href="../language/GrammatikArtikel.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Artikel in German Grammar</li>
-  </a>
-  <a href="../language/GrammatikPronomen.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Pronomen in German Grammar</li>
-  </a>
-  <a href="../language/GrammatikAdjektiv.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Adjektiv in German Grammar</li>
-  </a>
-</ul>
-</div>
+<img src="../site_contents/pub_doc/11_Adjektiv.png" style="width:100%;" class="w3-round">
 <br>
 
 
