--- a/language/GrammatikVerben.html
+++ b/language/GrammatikVerben.html
@@ -104,7 +104,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Artikel</div></a>   <a href="../language/GrammatikPronomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Pronomen_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Pronomen</div></a>  
+     <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Adjektiv</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
@@ -176,7 +178,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Artikel</div></a>   <a href="../language/GrammatikPronomen.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Pronomen_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Pronomen</div></a>  
+     <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Grammatik Adjektiv</div></a>  
 </div> 
  
 <button  onclick="myAccFunc('engineeringAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_engineering_list_LIST_COLOR" >
