--- a/language/GrammatikAdverb.html
+++ b/language/GrammatikAdverb.html
@@ -71,7 +71,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../islamic/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -106,7 +106,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adverb_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Adverb</div></a>  
 </div> 
@@ -147,7 +147,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../islamic/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -182,7 +182,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adverb_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Adverb</div></a>  
 </div> 
@@ -200,29 +200,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 
 </nav>
 
-<p id="islamic_home">
-<h5>
-هذا الجزء يحتوي على الملفات التالية
-</h5>
+<p id="D_Adverb_id">
+<header>
+<h2>
+Deutsche Grammatik - Adverb
+</h2>
+</header>
 </p>
 <br>
-<div class="w3-container w3-margin-bottom"> 
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../islamic/tajweed.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>تلخيص لأحكام تجويد القرآن الكريم</li>
-  </a>
-</ul>
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../islamic/paradigm.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
-  </a>
-</ul>
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../islamic/qinfo.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Quran Infographic</li>
-  </a>
-</ul>
-</div>
+<img src="../site_contents/pub_doc/12_Adverb.png" style="width:100%;" class="w3-round">
 <br>
 
 
