--- a/language/GrammatikPreposition.html
+++ b/language/GrammatikPreposition.html
@@ -106,9 +106,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adverb_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Adverb</div></a>   <a href="../language/GrammatikPreposition.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Prepos_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Adverb</div></a>   <a href="../language/GrammatikPreposition.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Praepositionen</div></a>  
 </div> 
@@ -184,9 +184,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Pronomen</div></a>   <a href="../language/GrammatikAdjektiv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adjektiv_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <div class="w3-right">Grammatik Adjektiv</div></a>   <a href="../language/GrammatikAdverb.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Adverb_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">Grammatik Adverb</div></a>   <a href="../language/GrammatikPreposition.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_D_Prepos_list_LIST_COLOR">
+     <div class="w3-right">Grammatik Adverb</div></a>   <a href="../language/GrammatikPreposition.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Grammatik Praepositionen</div></a>  
 </div> 
@@ -207,12 +207,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <p id="D_Adverb_id">
 <header>
 <h2>
-Deutsche Grammatik - Adverb
+Deutsche Grammatik - Prepositions
 </h2>
 </header>
 </p>
 <br>
-<img src="../site_contents/pub_doc/12_Adverb.png" style="width:100%;" class="w3-round">
+<img src="../site_contents/pub_doc/13_Praepositionen.png" style="width:100%;" class="w3-round">
 <br>
 
 
